# affetto-nn-ctrl

./: README.md  pyproject.toml
apps/: calculate_rmse.py  calculate_score.py  collect_data.py  estimate_dynamical_systems.py  optimize_esn_model.py  optimize_model.py  record_trajectory.py  test_initializer.py  track_trajectory.py  train_esn_model.py  train_model.py
apps/config/: affetto.toml  init_whole_body.toml  model.toml
apps/drawer/: compare_rmse_across_joint.py  compare_scores_across_dataset.py  compare_scores_across_dataset_size.py  compare_scores_across_steps.py  compare_tracked_trajectories.py  generate_latex_table_across_dataset.py  generate_latex_table_across_regressors.py  plot_collected_data.py  plot_timeseries.py  plot_utility.py
docs/: optuna_postgresql_workflow.md
scripts/: command.sh
src/affetto_nn_ctrl/: __init__.py  _typing.py  control_utility.py  data_handling.py  esn.py  event_logging.py  model_utility.py  plot_utility.py
tests/: __init__.py  test_control_utility.py  test_data_adapter.py  test_data_handling.py  test_model_utility.py
tests/data/: affetto.toml  joint_linear.csv  joint_mlp_hidden_layer_sizes-100-100_max_iter-500.csv  joint_mlp_hidden_layer_sizes-200_max_iter-500.csv  joint_mlp_max_iter-200.csv  joint_mlp_max_iter-800.csv  joint_ridge_alpha-0.1.csv  joint_ridge_alpha-1.0.csv  linear.csv  mlp_max_iter-500.csv  ridge_alpha-0.1.csv  simple_linear.csv  simple_mlp_max_iter-200.csv  simple_mlp_max_iter-500.csv  simple_mlp_max_iter-800.csv  simple_ridge_alpha-0.1.csv  simple_ridge_alpha-1.0.csv
